--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <script src="js/java.js"></script>
+  <script src="/java.js"></script>
 
   <section class="hero is-small is-info is-bold">
     <div class="hero-body">
