--- a/index.html
+++ b/index.html
@@ -378,6 +378,10 @@
               <option value="jgMunAFSb3WJwUy4sCQRSa">360 video</option>
               <option value="3gYLRDEGD4nSRyF1ToN6Bb">Events</option>
               <option value="8xQUekqbypXJ8qdvMm6HRq">Personalized Video</option>
+              <option value="f1NgU4xpFLLTq4u5rXN3t1">Request Access</option>
+              <option value="BFS2CmZXV3kaZ1kbRr1Lxz">Unreleased</option>
+              <option value="ZMujL7YRrSki5Vk99xMz51">Unreleased countdown</option>
+              <option value="PiV9a5gsiRgTGtNXfvVYuQ">Audio Only</option>
             </select>
           </div>
         </div>
