--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                     <select id="enviro_selected">
                       <option selected value="staging">staging</option>
                       <option value="staging-qa">staging-qa</option>
+                      <option value="staging-hulk">staging-hulk</option>
                       <option value="staging-beast">staging-beast</option>
                       <option value="staging-flash">staging-flash</option>
                       <option value="staging-superman">staging-superman</option>
