add seconds and video_id

--- a/index.html
+++ b/index.html
@@ -125,6 +125,32 @@
           </div>
           <div class="field is-horizontal">
             <div class="field-label is-small">
+              <label for="video_id" class="label">video_id</label>
+            </div>
+            <div class="field-body">
+              <div class="field">
+                <p class="control">
+                  <input class="input is-small" type="number" min="0" id="video_id">
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="column">
+          <div class="field is-horizontal">
+            <div class="field-label is-small">
+              <label for="seconds" class="label">seconds</label>
+            </div>
+            <div class="field-body">
+              <div class="field">
+                <p class="control">
+                  <input class="input is-small" type="number" min="0" id="seconds">
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="field is-horizontal">
+            <div class="field-label is-small">
               <label for="cc" class="label tooltip" data-tooltip="Closed Caption Language">cc</label>
             </div>
             <div class="field-body">
