add a Branded player

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
           </div>
         </div>
         <div class="column">
-
+          
         </div>
         <div class="column">
 
@@ -400,7 +400,7 @@
             <div class="field-label is-small">
               <label for="players" class="label has-text-left">Players</label>
             </div>
-            <select multiple size="8" id="players" name="players" onchange="changeFunc();">
+            <select multiple size="10" id="players" name="players" onchange="changeFunc();">
               <option value="ofqn6u3PfvaXqz1KvAx3Yp">Captions</option>
               <option value="jgMunAFSb3WJwUy4sCQRSa">360 video</option>
               <option value="3gYLRDEGD4nSRyF1ToN6Bb">Events</option>
@@ -409,6 +409,7 @@
               <option value="BFS2CmZXV3kaZ1kbRr1Lxz">Unreleased</option>
               <option value="ZMujL7YRrSki5Vk99xMz51">Unreleased countdown</option>
               <option value="PiV9a5gsiRgTGtNXfvVYuQ">Audio Only</option>
+              <option value="yfH54kZLVQWy6v5B9ThpaW">Branded</option>
             </select>
           </div>
         </div>
