--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
             <div class="field-label is-small">
               <label for="players" class="label has-text-left">Players</label>
             </div>
-            <select multiple size="10" id="players" name="players" onchange="changeFunc();">
+            <select multiple size="12" id="players" name="players" onchange="changeFunc();">
               <option value="ofqn6u3PfvaXqz1KvAx3Yp">Captions</option>
               <option value="jgMunAFSb3WJwUy4sCQRSa">360 video</option>
               <option value="3gYLRDEGD4nSRyF1ToN6Bb">Events</option>
@@ -410,6 +410,12 @@
               <option value="ZMujL7YRrSki5Vk99xMz51">Unreleased countdown</option>
               <option value="PiV9a5gsiRgTGtNXfvVYuQ">Audio Only</option>
               <option value="yfH54kZLVQWy6v5B9ThpaW">Branded</option>
+              <option value="YyGuCGRSrPav2NWedG5o6E">Autoplay (Dashboard)</option>
+              <option value="qXxznS8QwRLQyhcuUKH5cW">Mute by Default (Dashboard)</option>
+              <option value="q8cUByXXTfRwSj9T7ey1re">Loop (Dashboard)</option>
+              <option value="jJ9ePtGTg4Npk6rwLAH3mt">Final Frame (Dashboard)</option>
+              <option value="BqNTVLaXsKsnzU5p9yz4rU">Redirect - Full Page (Dashboard)</option>
+              <option value="mpnHHvYwsB36drqgjDTsur">Redirect - Embed (Dashboard)</option>
             </select>
           </div>
         </div>
