--- a/index.html
+++ b/index.html
@@ -410,6 +410,7 @@
               <option value="ZMujL7YRrSki5Vk99xMz51">Unreleased countdown</option>
               <option value="PiV9a5gsiRgTGtNXfvVYuQ">Audio Only</option>
               <option value="yfH54kZLVQWy6v5B9ThpaW">Branded</option>
+              <option value="s1Uy8VRi8Njj2NxnxSHwXt">Name Overlay (Dashboard)</option>
               <option value="YyGuCGRSrPav2NWedG5o6E">Autoplay (Dashboard)</option>
               <option value="qXxznS8QwRLQyhcuUKH5cW">Mute by Default (Dashboard)</option>
               <option value="q8cUByXXTfRwSj9T7ey1re">Loop (Dashboard)</option>
