added mp4 player

--- a/index.html
+++ b/index.html
@@ -417,6 +417,7 @@
               <option value="f1NgU4xpFLLTq4u5rXN3t1">Request Access</option>
               <option value="BFS2CmZXV3kaZ1kbRr1Lxz">Unreleased</option>
               <option value="ZMujL7YRrSki5Vk99xMz51">Unreleased countdown</option>
+              <option value="vSQ8FyPsXVgzMx4G8nP3MF">Not HLS</option>
               <option value="PiV9a5gsiRgTGtNXfvVYuQ">Audio Only</option>
               <option value="yfH54kZLVQWy6v5B9ThpaW">Branded</option>
               <option value="s1Uy8VRi8Njj2NxnxSHwXt">Name Overlay (Dashboard)</option>
