changed preload to auto

--- a/index.html
+++ b/index.html
@@ -398,8 +398,8 @@
             </label>
           </p>
           <p class="control">
-            <label class="checkbox tooltip" for="preload" data-tooltip="=none to disable">
-              <input type="checkbox" id="preload" value="preload=none">
+            <label class="checkbox tooltip" for="preload" data-tooltip="disabled by default">
+              <input type="checkbox" id="preload" value="preload=auto">
               preload
             </label>
           </p>
